--- a/README
+++ b/README
@@ -5,8 +5,9 @@ dwm is an extremely fast, small, and dynamic window manager for X.
 
 Requirements
 ------------
-In order to build dwm you need the Xlib header files.
 
+- xlib In order to build dwm you need the Xlib header files.
+- rofi https://github.com/davatorium/rofi/blob/next/INSTALL.md
 
 Installation
 ------------
